# Tarea4-Analisis

./: .gitignore  .gitmodules  Analisis.md  README.md  WELCOME.md  core.html  core.html.md  index.html  index.html.md  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml  tarea.md
.devcontainer/: Dockerfile  devcontainer.json
data/: repos.json
data/results/: Flowise-codeql.json  Flowise-grype-raw.json  Flowise-grype.json  FlowiseChatEmbed-grype-raw.json  FlowiseChatEmbed-grype.json  FlowiseChatEmbed-sbom.json  FlowiseDocs-codeql.json  FlowiseDocs-sbom.json  FlowiseEmbedReact-codeql.json  (+9 more)
id_2026/: _modidx.py  core.py
ml5/: dino_run.html  hand_pose.html  image_classification.html  image_classification_tm.html  object_detection.html  sound_classifier.html
nbs/: 00_core.ipynb  _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml
sbom/: explicacion_script_sbom.html  explicacion_script_sbom.html.md  generacion_sbom.html  generacion_sbom.html.md  introduccion_sboms-commonmark.md  introduccion_sboms.html
scripts/: add_submodules.py  generate_analysis_CICD.py  generate_codeql.py  generate_grype.py  generate_sboms.py
vuln/: caso_litellm-commonmark.md  caso_litellm.html  explicacion_script_codeql.html  explicacion_script_codeql.html.md  explicacion_script_grype.html  explicacion_script_grype.html.md  generacion_codeql.html  generacion_codeql.html.md  generacion_grype.html  generacion_grype.html.md  introduccion_vulnerabilidades-commonmark.md  introduccion_vulnerabilidades.html  taxonomia_vulnerabilidades-commonmark.md  taxonomia_vulnerabilidades.html
(+16 files in other folders)
